--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 
+materialIconsExtendedVersion = "1.5.0"
 runtimeLivedata = "1.7.6"
 retrofit = "2.11.0"
 converterGson = "2.11.0"
@@ -16,9 +17,16 @@ savedState = "2.8.7"
 lifecycleViewModelKtx = "2.8.7"
 navigationCompose = "2.8.5"
 kotlinSerialization = "1.6.3"
+coil = "2.4.0"
+firebaseBom = "33.9.0"
+firebaseBomVersion = "32.8.0"
+firebaseMessaging = "24.1.0"
+googleFirebaseBom = "33.10.0"
+material2 = "1.7.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material-icons-extended-v150 = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -46,6 +54,12 @@ androidx-lifecycle-viewmodel-ktx = {group = "androidx.lifecycle", name = "lifecy
 androidx-navigation-compose = { group =  'androidx.navigation', name = 'navigation-compose', version.ref = 'navigationCompose' }
 kotlinx-serialization-json = { group = 'org.jetbrains.kotlinx', name = 'kotlinx-serialization-json-jvm', version.ref = 'kotlinSerialization' }
 
+androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material2" }
+io-coil-kt-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-bom-v3280 = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebaseMessaging" }
+google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
